// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleguideComponentNotificationHandler getTeamsMessage method for created event should match snapshot when there are more than one events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 new components** are added in _styleguideName_! 🏃‍♂️",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        },
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://components?stid=styleguideId&coids=componentId,componentId2"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId&coid=componentId2"
        }
      ]
    }
  ]
}
`;

exports[`styleguideComponentNotificationHandler getTeamsMessage method for created event should match snapshot when there is only one event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**componentName** is added in _styleguideName_! 🏃‍♂️",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://components?stid=styleguideId&coids=componentId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId"
        }
      ]
    }
  ]
}
`;

exports[`styleguideComponentNotificationHandler getTeamsMessage method for version_created event should match snapshot when there are more than one events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 components** are updated in _styleguideName_! 🏃‍♂️",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        },
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://components?stid=styleguideId&coids=componentId,componentId2"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId&coid=componentId2"
        }
      ]
    }
  ]
}
`;

exports[`styleguideComponentNotificationHandler getTeamsMessage method for version_created event should match snapshot when there is only one event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**componentName** is updated in _styleguideName_! 🏃‍♂️",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://components?stid=styleguideId&coids=componentId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId"
        }
      ]
    }
  ]
}
`;
